--- a/tasks/cdn/fastly/fastly.schema.cdn.yml
+++ b/tasks/cdn/fastly/fastly.schema.cdn.yml
@@ -96,6 +96,9 @@ schemas:
     type: "dict"
     description: "fastly cdn parameters list schema"
     props:
+      when:
+        type: "bool"
+        description: "when false, ignores the item; defaults to true"
       name:
         type: "str"
         non_empty: true
