--- a/tasks/storage/digital_ocean/digital_ocean.schema.storage.yml
+++ b/tasks/storage/digital_ocean/digital_ocean.schema.storage.yml
@@ -49,6 +49,9 @@ schemas:
     type: "dict"
     description: "digital ocean storage parameters list schema"
     props:
+      when:
+        type: "bool"
+        description: "when false, ignores the item; defaults to true"
       name:
         type: "str"
         description: "block storage name"
