--- a/tasks/dns/cloudflare/cloudflare.schema.dns.yml
+++ b/tasks/dns/cloudflare/cloudflare.schema.dns.yml
@@ -79,6 +79,9 @@ schemas:
     type: "dict"
     description: "godaddy dns parameters list schema"
     props:
+      when:
+        type: "bool"
+        description: "when false, ignores the item; defaults to true"
       zone:
         type: "str"
         description: >-
