--- a/tasks/nameserver/godaddy/godaddy.schema.nameserver.yml
+++ b/tasks/nameserver/godaddy/godaddy.schema.nameserver.yml
@@ -35,6 +35,9 @@ schemas:
     type: "dict"
     description: "godaddy nameserver parameters list schema"
     props:
+      when:
+        type: "bool"
+        description: "when false, ignores the item; defaults to true"
       zone:
         type: "str"
         non_empty: true
