[dev] cdn - fastly

--- a/tasks/cdn/fastly/fastly.main.cdn.yml
+++ b/tasks/cdn/fastly/fastly.main.cdn.yml
@@ -15,22 +15,22 @@
   lrd.ext_cloud.fastly_cdn:
     fastly_api_key: "{{ ext_cdn_item.api_key }}"
     name: "{{ ext_cdn_item.name }}"
-    activate_new_version: "{{ ext_cdn_item.activate_new_version }}"
-    domains: "{{ ext_cdn_item.domains }}"
-    healthchecks: "{{ ext_cdn_item.healthchecks }}"
-    backends: "{{ ext_cdn_item.backends }}"
-    cache_settings: "{{ ext_cdn_item.cache_settings }}"
-    conditions: "{{ ext_cdn_item.conditions }}"
-    directors: "{{ ext_cdn_item.directors }}"
-    gzips: "{{ ext_cdn_item.gzips }}"
-    headers: "{{ ext_cdn_item.headers }}"
-    request_settings: "{{ ext_cdn_item.request_settings }}"
-    response_objects: "{{ ext_cdn_item.response_objects }}"
-    snippets: "{{ ext_cdn_item.snippets }}"
-    s3s: "{{ ext_cdn_item.s3s }}"
-    syslogs: "{{ ext_cdn_item.syslogs }}"
-    settings: "{{ ext_cdn_item.settings }}"
     state: "{{ ext_cdn_item.state }}"
+    domains: "{{ ext_cdn_item.domains }}"
+    activate_new_version: "{{ ext_cdn_item.activate_new_version | default(omit, true) }}"
+    healthchecks: "{{ ext_cdn_item.healthchecks | default(omit, true) }}"
+    backends: "{{ ext_cdn_item.backends | default(omit, true) }}"
+    cache_settings: "{{ ext_cdn_item.cache_settings | default(omit, true) }}"
+    conditions: "{{ ext_cdn_item.conditions | default(omit, true) }}"
+    directors: "{{ ext_cdn_item.directors | default(omit, true) }}"
+    gzips: "{{ ext_cdn_item.gzips | default(omit, true) }}"
+    headers: "{{ ext_cdn_item.headers | default(omit, true) }}"
+    request_settings: "{{ ext_cdn_item.request_settings | default(omit, true) }}"
+    response_objects: "{{ ext_cdn_item.response_objects | default(omit, true) }}"
+    snippets: "{{ ext_cdn_item.snippets | default(omit, true) }}"
+    s3s: "{{ ext_cdn_item.s3s | default(omit, true) }}"
+    syslogs: "{{ ext_cdn_item.syslogs | default(omit, true) }}"
+    settings: "{{ ext_cdn_item.settings | default(omit, true) }}"
   loop: "{{ ext_cdn_data_wrapper.data.list }}"
   loop_control:
     loop_var: ext_cdn_item
