[dev] cdn - fastly - fix schema | [docs] s3

--- a/tasks/cdn/fastly/fastly.schema.cdn.yml
+++ b/tasks/cdn/fastly/fastly.schema.cdn.yml
@@ -636,16 +636,16 @@ schemas:
       type:
         type: "str"
         choices:
-          - "init",
-          - "recv",
-          - "hash",
-          - "hit",
-          - "miss",
-          - "pass",
-          - "fetch",
-          - "error",
-          - "deliver",
-          - "log",
+          - "init"
+          - "recv"
+          - "hash"
+          - "hit"
+          - "miss"
+          - "pass"
+          - "fetch"
+          - "error"
+          - "deliver"
+          - "log"
           - "none"
         description: >-
           The location in generated VCL where the snippet should be placed. Defaults to 'init'. Options:
