--- a/tasks/cdn/aws/aws.schema.cdn.yml
+++ b/tasks/cdn/aws/aws.schema.cdn.yml
@@ -29,6 +29,11 @@ schemas:
           the parameters as only one definition. Instead, what is defined at the outer parameters
           will be used as a default for each list item parameter. When not defined, will use
           the outer parameters as one single list item.
+      absent:
+        type: "bool"
+        description: >-
+          When true, destroys the distribution, regardless of the state (acts as if the state is 'absent',
+          even if it isn't). Defaults to false.
       name:
         type: "str"
         description: >-
@@ -155,12 +160,13 @@ schemas:
           restrict it's content.
       tags:
         type: "map"
+        elem_type: "str"
         description: >-
           Should be input as a dict of key-value pairs.
           Note that numeric keys or values must be wrapped in quotes. e.g. Priority: '1'
       validate_certs:
         type: "bool"
-        description: "When set to "no", SSL certificates will not be validated."
+        description: "When set to 'no', SSL certificates will not be validated."
       wait:
         type: "bool"
         description: >-
@@ -170,6 +176,9 @@ schemas:
       wait_timeout:
         type: "int"
         description: "Specifies the duration in seconds to wait for a timeout of a cloudfront create or update."
+      web_acl_id:
+        type: "str"
+        description: "The ID of a Web Application Firewall (WAF) Access Control List (ACL)."
   list_item_params:
     type: "dict"
     description: "AWS Cloudfront CDN parameters list schema"
@@ -177,12 +186,156 @@ schemas:
       when:
         type: "bool"
         description: "When false, ignores the item. Defaults to true."
+      absent:
+        type: "bool"
+        description: >-
+          When true, destroys the distribution, regardless of the state (acts as if the state is 'absent',
+          even if it isn't). Defaults to false.
       name:
         type: "str"
         description: >-
           The unique name for the Cloudfront distribution (caller_reference).
           Each caller reference must be unique across all distributions;
           e.g. a caller reference used in a web distribution cannot be reused in a streaming distribution.
+      aliases:
+        type: "list"
+        elem_type: "str"
+        description: >-
+          A list of domain name aliases (CNAMEs) as strings to be used for the distribution.
+          Each alias must be unique across all distribution for the AWS account.
+      cache_behaviors:
+        type: "list"
+        elem_schema: "cache_behavior"
+        description: >-
+          A list of dictionaries describing the cache behaviors for the distribution.
+          The order of the list is preserved across runs unless purge_cache_behaviors is enabled.
+      comment:
+        type: "str"
+        description: >-
+          A comment that describes the CloudFront distribution.
+          If not specified, it defaults to a generic message and a datetime stamp.
+      custom_error_responses:
+        type: "list"
+        elem_schema: "custom_error_response"
+        description: >-
+          A config element that is a list[] of complex custom error responses to be specified
+          for the distribution.
+          This attribute configures custom http error messages returned to the user.
+      default_cache_behavior:
+        schema: "default_cache_behavior"
+        description: >-
+          A dict specifying the default cache behavior of the distribution.
+          If not specified, the target_origin_id is defined as the target_origin_id of the first
+          valid cache_behavior in cache_behaviors with defaults.
+      default_origin_path:
+        type: "str"
+        description: >-
+          The default origin path to specify for an origin if no origins have been specified.
+          Defaults to empty if not specified.
+      default_root_object:
+        type: "str"
+        description: >-
+          A config element that specifies the path to request when the user requests the origin;
+          e.g. if specified as 'index.html', this maps to www.example.com/index.html when www.example.com is called by the user.
+          This prevents the entire distribution origin from being exposed at the root.
+      e_tag:
+        type: "str"
+        description: >-
+          A unique identifier of a modified or existing distribution.
+          Is determined automatically if not specified.
+      enabled:
+        type: "bool"
+        description: >-
+          A boolean value that specifies whether the distribution is enabled or disabled.
+          Defaults to false.
+      http_version:
+        type: "str"
+        description: >-
+          The version of the http protocol to use for the distribution.
+          AWS defaults this to http2.
+        choices: ["http1.1", "http2"]
+      ipv6_enabled:
+        type: "bool"
+        description: >-
+          Determines whether IPv6 support is enabled or not.
+          Defaults to false.
+      logging:
+        schema: "logging"
+        description: >-
+          A config element that is a complex object that defines logging for the distribution.
+      origins:
+        type: "list"
+        elem_schema: "origin"
+        description: >-
+          A config element that is a list of complex origin objects to be specified for the
+          distribution. Used for creating and updating distributions.
+      price_class:
+        type: "str"
+        description: >-
+          A string that specifies the pricing class of the distribution.
+          As per https://aws.amazon.com/cloudfront/pricing/
+          price_class=PriceClass_100 consists of the areas United States, Canada and Europe.
+          price_class=PriceClass_200 consists of the areas United States, Canada, Europe,
+          Japan, India, Hong Kong, Philippines, S. Korea, Singapore & Taiwan.
+          price_class=PriceClass_All consists of the areas United States, Canada, Europe,
+          Japan, India, South America, Australia, Hong Kong, Philippines, S. Korea, Singapore & Taiwan.
+          AWS defaults this to PriceClass_All.
+        choices: ["PriceClass_100", "PriceClass_200", "PriceClass_All"]
+      purge_aliases:
+        type: "bool"
+        description: >-
+          Specifies whether existing aliases will be removed before adding new aliases.
+          When purge_aliases=true, existing aliases are removed and aliases are added.
+      purge_cache_behaviors:
+        type: "bool"
+        description: >-
+          Whether to remove any cache behaviors that aren't listed in cache_behaviors.
+          This switch also allows the reordering of cache_behaviors.
+      purge_custom_error_responses:
+        type: "bool"
+        description: >-
+          Whether to remove any custom error responses that aren't listed in custom_error_responses.
+      purge_origins:
+        type: "bool"
+        description: "Whether to remove any origins that aren't listed in origins."
+      purge_tags:
+        type: "bool"
+        description: >-
+          Specifies whether existing tags will be removed before adding new tags.
+          When purge_tags=yes, existing tags are removed and tags are added, if specified.
+          If no tags are specified, it removes all existing tags for the distribution.
+          When purge_tags=no, existing tags are kept and tags are added, if specified.
+      region:
+        type: "str"
+        description: >-
+          The AWS region to use.
+          See http://docs.aws.amazon.com/general/latest/gr/rande.html#ec2_region
+      restrictions:
+        schema: "restrictions"
+        description: >-
+          A config element that is a complex object that describes how a distribution should
+          restrict it's content.
+      tags:
+        type: "map"
+        elem_type: "str"
+        description: >-
+          Should be input as a dict of key-value pairs.
+          Note that numeric keys or values must be wrapped in quotes. e.g. Priority: '1'
+      validate_certs:
+        type: "bool"
+        description: "When set to 'no', SSL certificates will not be validated."
+      wait:
+        type: "bool"
+        description: >-
+          Specifies whether the module waits until the distribution has completed processing
+          the creation or update.
+          Defaults to false.
+      wait_timeout:
+        type: "int"
+        description: "Specifies the duration in seconds to wait for a timeout of a cloudfront create or update."
+      web_acl_id:
+        type: "str"
+        description: "The ID of a Web Application Firewall (WAF) Access Control List (ACL)."
   cache_behavior:
     type: "dict"
     description: >-
